Ajout du sous menu + mise à jour de petit détail

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
         </div>
 
         <div class="header-right">
-            <a href="ressources/CV - PERNAUD Lucille.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
+            <a href="ressources/CV_Lucille_Pernaud.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
             <nav>
-                <ul>
-                    <li><a href="#" class="active">Homepage</a></li>
-                    <li><a href="#">Gallery</a></li>
+                <ul class="main-menu">
+                    <li><a href="index.html" class="active">Homepage</a></li>
+                    
+                    <li class="has-dropdown">
+                        <a href="#">Gallery</a>
+                        <ul class="dropdown">
+                            <li><a href="#">Animation</a></li>
+                            <li><a href="#">Shorts</a></li>
+                            <li><a href="#">Illustration</a></li>
+                            <li><a href="#">Traditional techniques</a></li>
+                            <li><a href="#">Storytelling</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">About me</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
@@ -53,10 +63,10 @@
     <footer>
         <div class="footer-container">
             <div class="social-links">
-                <a href="#">Cara</a>
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Youtube</a>
+                <a href="https://cara.app/mollydaiwolf">Cara</a>
+                <a href="https://www.facebook.com/profile.php?id=61578014297071">Facebook</a>
+                <a href="https://www.instagram.com/lushi_per/">Instagram</a>
+                <a href="https://www.youtube.com/channel/UCLyJn1T6x2TgNs3_Pf6fgcA">Youtube</a>
             </div>
 
             <div class="contact-info">
@@ -66,7 +76,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fa-solid fa-phone"></i>
-                    <span>06 20 15 80 08</span>
+                    <a href="tel:+33620158008">06 20 15 80 08</a>
                 </div>
             </div>
             
