--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
             <a href="ressources/CV - PERNAUD Lucille.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="index.html" class="active">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     
                     <li class="has-dropdown">
                         <a href="gallery.html">Gallery</a>
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li><a href="aboutme.html">About me</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                    <li><a href="contacts.html" class="active">Contacts</a></li>
                 </ul>
             </nav>
             <div class="star-icon">
