--- a/gallery.html
+++ b/gallery.html
@@ -26,10 +26,10 @@
             <a href="ressources/CV - PERNAUD Lucille.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="index.html" class="active">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     
                     <li class="has-dropdown">
-                        <a href="gallery.html">Gallery</a>
+                        <a href="gallery.html" class="active">Gallery</a>
                         <ul class="dropdown">
                             <li><a href="animation.html">Animation</a></li>
                             <li><a href="shorts.html">Shorts</a></li>
