--- a/shorts.html
+++ b/shorts.html
@@ -26,13 +26,13 @@
             <a href="ressources/CV - PERNAUD Lucille.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="index.html" class="active">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     
                     <li class="has-dropdown">
                         <a href="gallery.html">Gallery</a>
                         <ul class="dropdown">
                             <li><a href="animation.html">Animation</a></li>
-                            <li><a href="shorts.html">Shorts</a></li>
+                            <li><a href="shorts.html" class="active">Shorts</a></li>
                             <li><a href="illustration.html">Illustration</a></li>
                             <li><a href="traditional.html">Traditional techniques</a></li>
                             <li><a href="storytelling.html">Storytelling</a></li>
