--- a/storytelling.html
+++ b/storytelling.html
@@ -26,7 +26,7 @@
             <a href="ressources/CV - PERNAUD Lucille.pdf" class="cv-btn">CV <i class="fa-solid fa-circle-down"></i></a>
             <nav>
                 <ul class="main-menu">
-                    <li><a href="index.html" class="active">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     
                     <li class="has-dropdown">
                         <a href="gallery.html">Gallery</a>
@@ -35,7 +35,7 @@
                             <li><a href="shorts.html">Shorts</a></li>
                             <li><a href="illustration.html">Illustration</a></li>
                             <li><a href="traditional.html">Traditional techniques</a></li>
-                            <li><a href="storytelling.html">Storytelling</a></li>
+                            <li><a href="storytelling.html" class="active">Storytelling</a></li>
                         </ul>
                     </li>
                     <li><a href="aboutme.html">About me</a></li>
